--- a/spec/fixtures/fixture.html
+++ b/spec/fixtures/fixture.html
@@ -1,3 +1,4 @@
+
 <div id="widget">
 
     <div class="form-group">
@@ -25,5 +26,6 @@
 
     <h4 id="loan-total"></h4>
     <h4 id="monthly-rate"></h4>
+    <h4 id="total-annual-cost"></h4>
 
 </div>
