--- a/spec/fixtures/fixture.html
+++ b/spec/fixtures/fixture.html
@@ -24,8 +24,11 @@
       </select>
     </div>
 
-    <h4 id="loan-total"></h4>
-    <h4 id="monthly-rate"></h4>
-    <h4 id="total-annual-cost"></h4>
+    <ul>
+      <li>Loan total: <span id="loan-total"></span></li>
+      <li>Monthly rate: <span id="monthly-rate"></span></li>
+      <li>Service fee: <span id="service-fee"></span></li>
+      <li>CAT: <span id="total-annual-cost"></span></li>
+    </ul>
 
 </div>
