Add interest total to the results
- Added new option for the interest total css selector
- Updated the render method to display the interest total
- Added new _interestTotal function
- Updated tests

--- a/example.html
+++ b/example.html
@@ -38,6 +38,7 @@
 
             <ul>
               <li>Loan total: <span id="loan-total"></span></li>
+              <li>Interest total: <span id="interest-total"></span></li>
               <li>Monthly rate: <span id="monthly-rate"></span></li>
               <li>Service fee: <span id="service-fee"></span></li>
               <li>CAT: <span id="total-annual-cost"></span></li>
