Update example to work offline
So users can easily see the example without having a webserver running,
all external assets loaded from a CDN are now loaded locally.

--- a/example.html
+++ b/example.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Loan Calculator Demo</title>
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+    <link rel="stylesheet" href="libs/bootstrap/bootstrap-3.3.4.min.css">
   </head>
   <body>
     <div class="container">
@@ -53,7 +53,7 @@
         </div><!-- col-sm-10 -->
       </div><!-- row -->
     </div><!-- container -->
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="libs/jquery/jquery-1.11.1.min.js"></script>
     <script src="js/jquery.loan-calculator.js"></script>
     <script>
       (function($){
