--- a/spec/fixtures/fixture.html
+++ b/spec/fixtures/fixture.html
@@ -26,7 +26,7 @@
 
     <ul>
       <li>Loan total: <span id="loan-total"></span></li>
-      <li>Monthly rate: <span id="monthly-rate"></span></li>
+      <li>Monthly rate: <span id="payment"></span></li>
       <li>Service fee: <span id="service-fee"></span></li>
       <li>CAT: <span id="total-annual-cost"></span></li>
     </ul>
