Minify and Uglify, add Interest rate to GTA Push

--- a/example.html
+++ b/example.html
@@ -372,7 +372,8 @@
 										<li>Borrowing: <span class="strong" id="selected-amount"></span></li>
 										<li>Over: <span class="strong" id="selected-duration"></span>&nbsp;Months</li>
 										<li>Representative: <span class="strong" id="total-annual-cost"></span>&nbsp;APR</li>
-										<li>Total amount to repay: <span class="strong " id="loan-total"></span> </li>
+										<li>Total Interest: <span class="strong " id="interest-total"></span> </li>
+
 									</ul>
 								</div>
 								<footer class="terms">
