Major Release 3.0. New Loan Products

--- a/example.html
+++ b/example.html
@@ -221,7 +221,7 @@
 					<nav>
 						<ul class="showcase-nav">
 							<li class="showcase-item">
-								<a class="showcase-link active" href="#" id="salary" data-toggle="product" data-interest="5.75" data-description="Work for one of our salary deduction partners? Benefit from a special rate with repayments taken straight from your salary." data-product="Salary deducted loan" data-default-value="7500" data-default-term="36" data-step="50" role="tab" data-min-term="6" data-max-term="60" data-max-value="15000" data-min-value="100">
+								<a class="showcase-link active" href="#" id="salary" data-toggle="product" data-interest="5.75" data-description="Work for one of our salary deduction partners? Benefit from a special rate with repayments taken straight from your salary." data-displayname="Salary deducted loan" data-default-value="7500" data-default-term="36" data-step="50" role="tab" data-min-term="6" data-max-term="60" data-max-value="15000" data-min-value="100">
 									<svg class="icon">
 										<use xlink:href="#icon_prdn" />
 									</svg>
@@ -229,7 +229,7 @@
 								</a>
 							</li>
 							<li class="showcase-item">
-								<a class="showcase-link" href="#" class="showcase-link" id="personal-loan" data-toggle="product" data-interest="6.69" data-description="The smart alternative to credit cards and arranged overdrafts. Available to all new and existing members in employment and with good credit." data-product="Personal Loan" data-step="25" data-default-value="5000" data-default-term="36" data-min-term="1" data-max-term="36" data-max-value="7499" data-min-value="100">
+								<a class="showcase-link" href="#" class="showcase-link" id="personal-loan" data-toggle="product" data-interest="6.69" data-description="The smart alternative to credit cards and arranged overdrafts. Available to all new and existing members in employment and with good credit." data-displayname="Personal Loan" data-step="25" data-default-value="5000" data-default-term="36" data-min-term="1" data-max-term="36" data-max-value="7499" data-min-value="100">
 
 									<svg class="icon">
 										<use xlink:href="#icon_percent" />
@@ -238,7 +238,7 @@
 								</a>
 							</li>
 							<li class="showcase-item">
-								<a class="showcase-link" href="#" id="home-owner-loan" data-default-value="20000" data-default-term="60" data-toggle="product" data-interest="4.75" data-description="For a new kitchen or extension, your dream car or anything else, home owners can borrow up to £25,000" data-product="Home Owner Loan" data-step="250" data-min-term="12" data-max-term="60" data-max-value="25000" data-min-value="15000">
+								<a class="showcase-link" href="#" id="home-owner-loan" data-default-value="20000" data-default-term="60" data-toggle="product" data-interest="4.75" data-description="For a new kitchen or extension, your dream car or anything else, home owners can borrow up to £25,000" data-displayname="Home Owner Loan" data-step="250" data-min-term="12" data-max-term="60" data-max-value="25000" data-min-value="15000">
 									<svg class="icon">
 										<use xlink:href="#icon_home" />
 									</svg>
@@ -246,7 +246,7 @@
 								</a>
 							</li>
 							<li class="showcase-item">
-								<a class="showcase-link" href="#" id="booster-loan" data-toggle="product" data-default-value="1000" data-default-term="18" data-interest="36" data-product="Credit Builder Loan" data-description="Unemployed or less-than-ideal credit? We'll help you get on track. Make things easy by having benefits paid directly into your credit union account." data-step="5" data-min-term="1" data-max-term="24" data-max-value="3500" data-min-value="100">
+								<a class="showcase-link" href="#" id="booster-loan" data-toggle="product" data-default-value="1000" data-default-term="18" data-interest="36" data-displayname="Credit Builder Loan" data-description="Unemployed or less-than-ideal credit? We'll help you get on track. Make things easy by having benefits paid directly into your credit union account." data-step="5" data-min-term="1" data-max-term="24" data-max-value="3500" data-min-value="100">
 									<svg class="icon">
 										<use xlink:href="#icon_booster" />
 									</svg>
@@ -254,7 +254,7 @@
 								</a>
 							</li>
 							<li class="showcase-item">
-								<a class="showcase-link" href="#" id="saver-loan" data-toggle="product" data-interest="4.41" data-description="Borrow at our lowest rate rate against any money you have saved in your Membership Account with us." data-product="Saver Loan" data-step="5" data-min-term="1" data-default-value="325" data-max-term="120" data-max-value="500" data-min-value="100">
+								<a class="showcase-link" href="#" id="saver-loan" data-toggle="product" data-interest="4.41" data-description="Borrow at our lowest rate rate against any money you have saved in your Membership Account with us." data-displayname="Saver Loan" data-step="5" data-min-term="1" data-default-value="325" data-max-term="120" data-max-value="500" data-min-value="100">
 									<svg class="icon">
 										<use xlink:href="#icon_saver" />
 									</svg>
